--- a/frontend/themes/vaadin+/typography.css
+++ b/frontend/themes/vaadin+/typography.css
@@ -1,3 +1,9 @@
+/* Font family */
+
+.font-mono {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
 /* Line clamp */
 
 [class*="line-clamp-"] {
