--- a/frontend/themes/vaadin+/styles.css
+++ b/frontend/themes/vaadin+/styles.css
@@ -1,4 +1,5 @@
 @import url('./components/breadcrumb.css');
+@import url('./components/error-messages.css');
 @import url('./components/input-group.css');
 @import url('./components/key-value-pairs.css');
 @import url('./components/list.css');
