--- a/frontend/themes/vaadin+/styles.css
+++ b/frontend/themes/vaadin+/styles.css
@@ -1,8 +1,11 @@
 @import url('./components/breadcrumb.css');
+@import url('./components/dialog.css');
 @import url('./components/input-group.css');
 @import url('./components/key-value-pairs.css');
 @import url('./components/list.css');
 @import url('./components/stepper.css');
+@import url('./themes/aero.css');
+@import url('./themes/compact.css');
 @import url('./background.css');
 @import url('./border.css');
 @import url('./filter.css');
@@ -13,31 +16,3 @@
 @import url('./transition.css');
 @import url('./typography.css');
 @import url('./z-index.css');
-
-[theme~='compact'] {
-    --lumo-size-xs: 1.5rem;
-    --lumo-size-s: 1.75rem;
-    --lumo-size-m: 2rem;
-    --lumo-size-l: 2.5rem;
-    --lumo-size-xl: 3rem;
-
-    --lumo-font-size: 1rem;
-    --lumo-font-size-xxs: 0.6875rem;
-    --lumo-font-size-xs: 0.75rem;
-    --lumo-font-size-s: 0.8125rem;
-    --lumo-font-size-m: 0.875rem;
-    --lumo-font-size-l: 1rem;
-    --lumo-font-size-xl: 1.125rem;
-    --lumo-font-size-xxl: 1.375rem;
-    --lumo-font-size-xxxl: 1.75rem;
-
-    --lumo-line-height-xs: 1.1;
-    --lumo-line-height-s: 1.2;
-    --lumo-line-height-m: 1.4;
-
-    --lumo-space-xs: 0.1875rem;
-    --lumo-space-s: 0.3125rem;
-    --lumo-space-m: 0.625rem;
-    --lumo-space-l: 1.25rem;
-    --lumo-space-xl: 1.875rem;
-}
