--- a/frontend/themes/vaadin+/styles.css
+++ b/frontend/themes/vaadin+/styles.css
@@ -1,17 +1,25 @@
 @import url('./components/breadcrumb.css');
-@import url('./components/dialog.css');
+@import url('./components/button.css');
+@import url('./components/checkbox.css');
 @import url('./components/input-group.css');
 @import url('./components/key-value-pairs.css');
+@import url('./components/input-field.css');
 @import url('./components/list.css');
+@import url('./components/menu-bar.css');
+@import url('./components/notification.css');
+@import url('./components/radio-button.css');
+@import url('./components/side-nav.css');
 @import url('./components/stepper.css');
+@import url('./components/tabs.css');
 @import url('./components/upload.css');
-@import url('themes/compact.css');
+@import url('./themes/compact.css');
 @import url('./accessibility.css');
 @import url('./background.css');
 @import url('./border.css');
 @import url('./flexbox-grid.css');
 @import url('./layout.css');
 @import url('./main-layout.css');
+@import url('./material-symbols.css');
 @import url('./spacing.css');
 @import url('./transforms.css');
 @import url('./typography.css');
