Material Design-inspired theme update

--- a/frontend/themes/vaadin+/styles.css
+++ b/frontend/themes/vaadin+/styles.css
@@ -12,7 +12,10 @@
 @import url('./components/stepper.css');
 @import url('./components/tabs.css');
 @import url('./components/upload.css');
+@import url('./themes/carbon.css');
 @import url('./themes/compact.css');
+@import url('./themes/material.css');
+@import url('./themes/radix.css');
 @import url('./accessibility.css');
 @import url('./background.css');
 @import url('./border.css');
