--- a/frontend/themes/vaadin+/themes/material.css
+++ b/frontend/themes/vaadin+/themes/material.css
@@ -6,108 +6,107 @@
 }
 
 [theme~='material'] {
+    /* Lumo */
     --lumo-font-family: 'Roboto';
 
     --lumo-border-radius-s: 8px;
     --lumo-border-radius-m: 12px;
     --lumo-border-radius-l: 16px;
 
-    --lumo-base-color: light-dark(#F9F9FF, #111318);
-
-    /*
-    --lumo-tint-5pct: hsla(0, 0%, 100%, 0.3);
-    --lumo-tint-10pct: hsla(0, 0%, 100%, 0.37);
-    --lumo-tint-20pct: hsla(0, 0%, 100%, 0.44);
-    --lumo-tint-30pct: hsla(0, 0%, 100%, 0.5);
-    --lumo-tint-40pct: hsla(0, 0%, 100%, 0.57);
-    --lumo-tint-50pct: hsla(0, 0%, 100%, 0.64);
-    --lumo-tint-60pct: hsla(0, 0%, 100%, 0.7);
-    --lumo-tint-70pct: hsla(0, 0%, 100%, 0.77);
-    --lumo-tint-80pct: hsla(0, 0%, 100%, 0.84);
-    --lumo-tint-90pct: hsla(0, 0%, 100%, 0.9);
-    --lumo-tint: #fff;
-
-    --lumo-shade-5pct: hsla(214, 61%, 25%, 0.05);
-    --lumo-shade-10pct: hsla(214, 57%, 24%, 0.1);
-    --lumo-shade-20pct: hsla(214, 53%, 23%, 0.16);
-    --lumo-shade-30pct: hsla(214, 50%, 22%, 0.26);
-    --lumo-shade-40pct: hsla(214, 47%, 21%, 0.38);
-    --lumo-shade-50pct: hsla(214, 45%, 20%, 0.52);
-    --lumo-shade-60pct: hsla(214, 43%, 19%, 0.6);
-    --lumo-shade-70pct: hsla(214, 42%, 18%, 0.69);
-    --lumo-shade-80pct: hsla(214, 41%, 17%, 0.83);
-    --lumo-shade-90pct: hsla(214, 40%, 16%, 0.94);
-    --lumo-shade: hsl(214, 35%, 15%);
-
-    --lumo-contrast-5pct: var(--lumo-shade-5pct);
-    --lumo-contrast-10pct: var(--lumo-shade-10pct);
-    --lumo-contrast-20pct: var(--lumo-shade-20pct);
-    --lumo-contrast-30pct: var(--lumo-shade-30pct);
-    --lumo-contrast-40pct: var(--lumo-shade-40pct);
-    --lumo-contrast-50pct: var(--lumo-shade-50pct);
-    --lumo-contrast-60pct: var(--lumo-shade-60pct);
-    --lumo-contrast-70pct: var(--lumo-shade-70pct);
-    --lumo-contrast-80pct: var(--lumo-shade-80pct);
-    --lumo-contrast-90pct: var(--lumo-shade-90pct);
-    --lumo-contrast: var(--lumo-shade);
-     */
-
-
-    --lumo-header-text-color: light-dark(#191C20, #E2E2E9);
-    --lumo-body-text-color: light-dark(#191C20, #E2E2E9);
-    --lumo-secondary-text-color: light-dark(#44474E, #C4C6D0);
-
-    --lumo-primary-color: light-dark(#415E91, #ABC7FF);
-    --lumo-primary-color-50pct: light-dark(#415E91, #ABC7FF);
-    --lumo-primary-color-10pct: light-dark(#D7E3FF, #284777);
-    --lumo-primary-text-color: light-dark(#415E91, #ABC7FF);
-    --lumo-primary-contrast-color: light-dark(#FFFFFF, #0B305F);
-
-    --lumo-error-color: light-dark(#BA1A1A, #FFB4AB);
-    --lumo-error-color-50pct: light-dark(#BA1A1A, #FFB4AB);
-    --lumo-error-color-10pct: light-dark(#FFDAD6, #93000A);
-    --lumo-error-text-color: light-dark(#BA1A1A, #FFB4AB);
-    --lumo-error-contrast-color: light-dark(#FFFFFF, #690005);
-
     --lumo-icon-size-s: 1.125rem;
     --lumo-icon-size-m: 1.5rem;
 
     --lumo-line-height-m: 1.5;
 
-    --lumo-box-shadow-xs: light-dark(
-            0px 1px 2px rgba(0, 0, 0, 0.3), 0px 1px 3px 1px rgba(0, 0, 0, 0.15),
-            0px 1px 3px 1px rgba(0, 0, 0, 0.15), 0px 1px 2px rgba(0, 0, 0, 0.3)
-    );
-    --lumo-box-shadow-s: light-dark(
-            0px 1px 2px rgba(0, 0, 0, 0.3), 0px 2px 6px 2px rgba(0, 0, 0, 0.15),
-            0px 2px 6px 2px rgba(0, 0, 0, 0.15), 0px 1px 2px rgba(0, 0, 0, 0.3)
-    );
-    --lumo-box-shadow-m: light-dark(
-            0px 4px 8px 3px rgba(0, 0, 0, 0.15), 0px 1px 3px rgba(0, 0, 0, 0.3),
-            0px 4px 8px 3px rgba(0, 0, 0, 0.15), 0px 1px 3px rgba(0, 0, 0, 0.3)
-    );
-    --lumo-box-shadow-l: light-dark(
-            0px 6px 10px 4px rgba(0, 0, 0, 0.15), 0px 2px 3px rgba(0, 0, 0, 0.3),
-            0px 6px 10px 4px rgba(0, 0, 0, 0.15), 0px 2px 3px rgba(0, 0, 0, 0.3)
-    );
-    --lumo-box-shadow-xl: light-dark(
-            0px 8px 12px 6px rgba(0, 0, 0, 0.15), 0px 4px 4px rgba(0, 0, 0, 0.3),
-            0px 8px 12px 6px rgba(0, 0, 0, 0.15), 0px 4px 4px rgba(0, 0, 0, 0.3)
-    );
+    /* Color */
+    --lumo-base-color: #F9F9FF;
 
+    --lumo-header-text-color: #191C20;
+    --lumo-body-text-color: #191C20;
+    --lumo-secondary-text-color: #44474E;
+
+    --lumo-primary-color: #415E91;
+    --lumo-primary-color-50pct: #415E91;
+    --lumo-primary-color-10pct: #D7E3FF;
+    --lumo-primary-text-color: #415E91;
+    --lumo-primary-contrast-color: #FFFFFF;
+
+    --lumo-error-color: #BA1A1A;
+    --lumo-error-color-50pct: #BA1A1A;
+    --lumo-error-color-10pct: #FFDAD6;
+    --lumo-error-text-color: #BA1A1A;
+    --lumo-error-contrast-color: #FFFFFF;
+
+    --lumo-box-shadow-xs: 0px 1px 2px rgba(0, 0, 0, 0.3), 0px 1px 3px 1px rgba(0, 0, 0, 0.15);
+    --lumo-box-shadow-s: 0px 1px 2px rgba(0, 0, 0, 0.3), 0px 2px 6px 2px rgba(0, 0, 0, 0.15);
+    --lumo-box-shadow-m: 0px 4px 8px 3px rgba(0, 0, 0, 0.15), 0px 1px 3px rgba(0, 0, 0, 0.3);
+    --lumo-box-shadow-l: 0px 6px 10px 4px rgba(0, 0, 0, 0.15), 0px 2px 3px rgba(0, 0, 0, 0.3);
+    --lumo-box-shadow-xl: 0px 8px 12px 6px rgba(0, 0, 0, 0.15), 0px 4px 4px rgba(0, 0, 0, 0.3);
+
+    /* Vaadin */
     --vaadin-button-border-radius: 9999px;
 
     --vaadin-checkbox-border-radius: 2px;
 
-    --vaadin-input-field-border-color: light-dark(#74777F, #8E9099);
+    --vaadin-input-field-background: #E2E2E9;
+    --vaadin-input-field-border-color: #74777F;
     --vaadin-input-field-border-radius: 4px;
+    --vaadin-input-field-invalid-background: transparent;
+    --vaadin-input-field-invalid-hover-highlight: transparent;
 
-    --material-surface-container-low: light-dark(#F3F3FA, #191C20);
-    --material-surface-container: light-dark(#EDEDF4, #1E2025);
-    --material-surface-container-high: light-dark(#E7E8EE, #282A2F);
+    /* Material */
+    --material-outline: #74777F;
 
-    --material-inverse-surface: light-dark(#2E3036, #E2E2E9);
-    --material-inverse-on-surface: light-dark(#F0F0F7, #2E3036);
+    --material-surface-container-low: #F3F3FA;
+    --material-surface-container: #EDEDF4;
+    --material-surface-container-high: #E7E8EE;
+
+    --material-inverse-surface: #2E3036;
+    --material-inverse-on-surface: #F0F0F7;
+    --material-inverse-primary: #ABC7FF;
+}
+
+[theme~='material'][theme~='dark'], [theme~='material'] [theme~='dark'] {
+    /* Color */
+    --lumo-base-color: #111318;
+
+    --lumo-header-text-color: #E2E2E9;
+    --lumo-body-text-color: #E2E2E9;
+    --lumo-secondary-text-color: #C4C6D0;
+
+    --lumo-primary-color: #ABC7FF;
+    --lumo-primary-color-50pct: #ABC7FF;
+    --lumo-primary-color-10pct: #284777;
+    --lumo-primary-text-color: #ABC7FF;
+    --lumo-primary-contrast-color: #0B305F;
+
+    --lumo-error-color: #FFB4AB;
+    --lumo-error-color-50pct: #FFB4AB;
+    --lumo-error-color-10pct: #93000A;
+    --lumo-error-text-color: #FFB4AB;
+    --lumo-error-contrast-color: #690005;
+
+    /* Shadow */
+    --lumo-box-shadow-xs: 0px 1px 3px 1px rgba(0, 0, 0, 0.15), 0px 1px 2px rgba(0, 0, 0, 0.3);
+    --lumo-box-shadow-s: 0px 2px 6px 2px rgba(0, 0, 0, 0.15), 0px 1px 2px rgba(0, 0, 0, 0.3);
+    --lumo-box-shadow-m: 0px 4px 8px 3px rgba(0, 0, 0, 0.15), 0px 1px 3px rgba(0, 0, 0, 0.3);
+    --lumo-box-shadow-l: 0px 6px 10px 4px rgba(0, 0, 0, 0.15), 0px 2px 3px rgba(0, 0, 0, 0.3);
+    --lumo-box-shadow-xl: 0px 8px 12px 6px rgba(0, 0, 0, 0.15), 0px 4px 4px rgba(0, 0, 0, 0.3);
+
+    /* Vaadin */
+    --vaadin-input-field-background: #33353A;
+    --vaadin-input-field-border-color: #8E9099;
+
+    /* Material */
+    --material-outline: #8E9099;
+
+    --material-surface-container-low: #191C20;
+    --material-surface-container: #1E2025;
+    --material-surface-container-high: #282A2F;
+
+    --material-inverse-surface: #E2E2E9;
+    --material-inverse-on-surface: #2E3036;
+    --material-inverse-primary: #415E91;
 }
 
 /* App layout */
@@ -116,6 +115,10 @@
 }
 
 /* Button */
+[theme~='material'] vaadin-button[theme~='icon'] {
+    padding: 0;
+}
+
 [theme~='material'] vaadin-button:not([theme~='icon']) {
     --material-symbols-font-size: var(--lumo-icon-size-s);
 }
@@ -132,7 +135,7 @@
 
 /* Combo box */
 [theme~='material'] :is(vaadin-combo-box-overlay, vaadin-multi-select-combo-box-overlay)::part(overlay) {
-    background-color: var(--material-surface-container);
+    background: var(--material-surface-container);
     border-radius: 4px;
     box-shadow: var(--lumo-box-shadow-s);
 }
@@ -148,12 +151,12 @@
 
 /* Dialog */
 [theme~='material'] vaadin-dialog-overlay::part(overlay) {
-    background-color: var(--material-surface-container-high);
+    background: var(--material-surface-container-high);
     box-shadow: none;
 }
 
 [theme~='material'] vaadin-dialog-overlay::part(footer) {
-    background-color: var(--material-surface-container-high);
+    background: var(--material-surface-container-high);
 }
 
 /* Date picker */
@@ -161,9 +164,83 @@
     border-radius: 9999px;
 }
 
+/* Input fields */
+[theme~='material'] :is(
+  vaadin-combo-box,
+  vaadin-date-picker,
+  vaadin-date-time-picker,
+  vaadin-email-field,
+  vaadin-integer-field,
+  vaadin-multi-select-combo-box,
+  vaadin-number-field,
+  vaadin-password-field,
+  vaadin-select,
+  vaadin-text-area,
+  vaadin-text-field,
+  vaadin-time-picker
+)[theme~='outline'] {
+    --vaadin-input-field-background: transparent;
+    --vaadin-input-field-border-color: var(--material-outline);
+    --vaadin-input-field-border-width: 1px;
+}
+
+[theme~='material'] :is(
+  vaadin-combo-box,
+  vaadin-date-picker,
+  vaadin-date-time-picker,
+  vaadin-email-field,
+  vaadin-integer-field,
+  vaadin-multi-select-combo-box,
+  vaadin-number-field,
+  vaadin-password-field,
+  vaadin-select,
+  vaadin-text-area,
+  vaadin-text-field,
+  vaadin-time-picker
+)[theme~='outline'][invalid] {
+    --vaadin-input-field-border-color: var(--lumo-error-color);
+    --vaadin-input-field-label-color: var(--lumo-error-text-color);
+    --vaadin-input-field-focused-label-color: var(--lumo-error-text-color);
+}
+
+/* Menu bar */
+[theme~='material'] vaadin-menu-bar-button,
+[theme~='material'] vaadin-menu-bar[theme~="rounded"] vaadin-menu-bar-button {
+    border-radius: 9999px;
+}
+
+[theme~='material'] vaadin-menu-bar-button[theme~='icon'] {
+    padding: 0;
+}
+
+[theme~='material'] vaadin-menu-bar-overlay::part(overlay) {
+    background: var(--material-surface-container);
+    box-shadow: none;
+}
+
+[theme~='material'] vaadin-menu-bar-overlay::part(content) {
+    padding: var(--lumo-space-s) 0;
+}
+
+[theme~='material'] vaadin-menu-bar-overlay vaadin-menu-bar-item {
+    border-radius: 0;
+}
+
+/* Notification */
+[theme~='material'] vaadin-notification-card::part(overlay) {
+    --lumo-body-text-color: var(--material-inverse-on-surface);
+    --lumo-secondary-text-color: var(--material-inverse-on-surface);
+    --lumo-primary-text-color: var(--material-inverse-primary);
+    background: var(--material-inverse-surface);
+    border-radius: 4px;
+    box-shadow: var(--lumo-box-shadow-m);
+    color: var(--lumo-body-text-color);
+}
+
 /* Popover */
 [theme~='material'] vaadin-popover-overlay::part(overlay) {
-    background-color: var(--material-surface-container-high);
+    background: var(--material-surface-container-high);
+    box-shadow: none;
 }
 
 /* Side nav */
@@ -181,7 +258,7 @@
 
 /* Tooltip */
 [theme~='material'] vaadin-tooltip-overlay::part(overlay) {
-    background-color: var(--material-inverse-surface);
+    background: var(--material-inverse-surface);
     border-radius: 4px;
     box-shadow: none;
     color: var(--material-inverse-on-surface);
